<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Diego Rossi (@_HellPie)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference
		android:summary="@string/preferences_warning_summary" />

	<PreferenceCategory
			android:title="@string/preferences_update_title">
		<Preference
				android:selectable="false"
				android:summary="@string/preferences_update_summary" />

		<SwitchPreference
				android:key="@string/preferences_update_enable_key"
				android:defaultValue="true"
				android:persistent="true"
				android:title="@string/preferences_update_enable_title"
				android:switchTextOn="@string/preferences_update_enable_summaryEnabled"
				android:switchTextOff="@string/preferences_update_enable_summaryDisabled" />

		<CheckBoxPreference
				android:key="@string/preferences_update_betas_key"
				android:defaultValue="true"
				android:persistent="true"
				android:dependency="@string/preferences_update_enable_key"
				android:title="@string/preferences_update_betas_title"
				android:summaryOn="@string/preferences_update_betas_summaryEnabled"
				android:summaryOff="@string/preferences_update_betas_summaryDisabled" />

		<!-- Disabled until Alpha updates will actually be available -->
		<CheckBoxPreference
				android:enabled="false"
				android:visibility="gone"
				android:key="@string/preferences_update_alphas_key"
				android:defaultValue="true"
				android:persistent="true"
				android:dependency="@string/preferences_update_betas_key"
				android:title="@string/preferences_update_alphas_title"
				android:summaryOn="@string/preferences_update_alphas_summaryEnabled"
				android:summaryOff="@string/preferences_update_alphas_summaryDisabled" />

		<ListPreference
				android:key="@string/preferences_update_timer_key"
				android:defaultValue="0"
				android:persistent="true"
				android:dependency="@string/preferences_update_enable_key"
				android:title="@string/preferences_update_timer_title"
				android:summary="@string/preferences_update_timer_summaryDefault"
				android:entries="@array/preferences_update_timer_entries"
				android:entryValues="@array/preferences_update_timer_entryValues"
				android:dialogTitle="@string/preferences_update_timer_dialogTitle"
				android:positiveButtonText="@null"
				android:negativeButtonText="@null"/>
	</PreferenceCategory>

	<PreferenceCategory
			android:title="@string/preferences_playback_title" >
		<Preference
				android:selectable="false"
				android:summary="@string/preferences_playback_summary" />

		<SwitchPreference
				android:key="@string/preferences_playback_resume_key"
				android:defaultValue="false"
				android:persistent="true"
				android:title="@string/preferences_playback_resume_title"
				android:summaryOn="@string/preferences_playback_resume_summaryEnabled"
				android:summaryOff="@string/preferences_playback_resume_summaryDisabled" />

		<CheckBoxPreference
				android:key="@string/preferences_playback_resume_headset_key"
				android:defaultValue="true"
				android:persistent="true"
				android:dependency="@string/preferences_playback_resume_key"
				android:title="@string/preferences_playback_resume_headset_title"
				android:summaryOn="@string/preferences_playback_resume_headset_summaryEnabled"
				android:summaryOff="@string/preferences_playback_resume_headset_summaryDisabled" />

		<SwitchPreference
				android:key="@string/preferences_playback_headset_key"
				android:defaultValue="false"
				android:persistent="true"
				android:title="@string/preferences_playback_headset_title"
				android:summaryOn="@string/preferences_playback_headset_summaryEnabled"
				android:summaryOff="@string/preferences_playback_headset_summaryDisabled" />
	</PreferenceCategory>

	<PreferenceCategory
			android:key="@string/preferences_debug_key"
			android:title="@string/preferences_debug_title"
			android:enabled="false">
		<Preference
				android:dependency="@string/preferences_debug_key"
				android:selectable="false"
				android:summary="@string/preferences_debug_summary" />

		<SwitchPreference
				android:key="@string/preferences_debug_enable_key"
				android:defaultValue="false"
				android:persistent="true"
				android:dependency="@string/preferences_debug_key"
				android:title="@string/preferences_debug_enable_title"
				android:summaryOn="@string/preferences_debug_enable_summaryEnabled"
				android:summaryOff="@string/preferences_debug_enable_summaryDisabled" />
	</PreferenceCategory>

	<PreferenceCategory
			android:key="@string/preferences_debug_tuner_key"
			android:dependency="@string/preferences_debug_enable_key"
			android:title="@string/preferences_debug_tuner_title">
		<Preference
				android:dependency="@string/preferences_debug_tuner_key"
				android:selectable="false"
				android:summary="@string/preferences_debug_tuner_summary" />

		<SwitchPreference
				android:key="@string/preferences_debug_logcat_key"
				android:defaultValue="true"
				android:persistent="true"
				android:title="@string/preferences_debug_logcat_title"
				android:summaryOn="@string/preferences_debug_logcat_summaryEnabled"
				android:summaryOff="@string/preferences_debug_logcat_summaryDisabled" />

		<CheckBoxPreference
				android:key="@string/preferences_debug_stacktrace_key"
				android:defaultValue="true"
				android:persistent="true"
				android:dependency="@string/preferences_debug_logcat_key"
				android:title="@string/preferences_debug_stacktrace_title"
				android:summaryOn="@string/preferences_debug_stacktrace_summaryEnabled"
				android:summaryOff="@string/preferences_debug_stacktrace_summaryDisabled" />

		<CheckBoxPreference
				android:key="@string/preferences_debug_upload_key"
				android:defaultValue="false"
				android:persistent="true"
				android:dependency="@string/preferences_debug_stacktrace_key"
				android:title="@string/preferences_debug_upload_title"
				android:summaryOn="@string/preferences_debug_upload_summaryEnabled"
				android:summaryOff="@string/preferences_debug_upload_summaryDisabled" />
		<Preference
				android:dependency="@string/preferences_debug_upload_key"
				android:selectable="false"
				android:summary="@string/preferences_debug_upload_warning" />

		<SwitchPreference
				android:key="@string/preferences_debug_analytics_key"
				android:defaultValue="false"
				android:persistent="true"
				android:title="@string/preferences_debug_analytics_title"
				android:summaryOn="@string/preferences_debug_analytics_summaryEnabled"
				android:summaryOff="@string/preferences_debug_analytics_summaryDisabled" />
		<Preference
			android:dependency="@string/preferences_debug_analytics_key"
			android:selectable="false"
			android:summary="@string/preferences_debug_analytics_warning" />
	</PreferenceCategory>
</PreferenceScreen>
